[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = 'multinet'
version = "0.1.0"
authors = [
  {email = "stephen.richer@proton.me"},
  {name = "Stephen Richer"}
]
description = 'Build and visualise multi-morbidity networks.'
readme = 'README.md'
requires-python = ">=3.8"
keywords = ['morbidity_network_analysis', 'multinet']
license = {file = "LICENSE"}
classifiers=[
    'Natural Language :: English',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Healthcare Industry',
    'Development Status :: 1 - Planning',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
dependencies = [
    'numpy',
    'pyvis',
    'scipy',
    'pyyaml',
    'pandas',
    'seaborn',
    'networkx',
    'wordcloud',
    'matplotlib',
    'statsmodels',
    'python-louvain'
]

[project.urls]
repository = 'https://github.com/nhsx/morbidity_network_analysis'

[project.scripts]
multinet = "multinet.cli:parseArgs"
